--- a/0723_Clone/index.html
+++ b/0723_Clone/index.html
@@ -40,6 +40,6 @@
             <h6>July 23</h6>
         </footer>
 
-        <script src="app.js"></script>
+        <script type="text/JavaScript" src="app.js"></script>
     </body>
 </html>
