modify 0803 cursor_tutorial

--- a/0803_Cursor Animation/index.html
+++ b/0803_Cursor Animation/index.html
@@ -23,9 +23,10 @@
                 <img class="main" src="img.jpg" alt="">
             </div>
             <div class="font-desc">
-                <h2>heeee</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, similique!
-                </p>
+                <h3>Front_End_Dev</h3>
+                <h3>&</h3>
+                <h3>Designer</h3>
+                <p>Seoul, Korea;</p>
             </div>
         </section>
         <script src="app.js"></script>
